--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Baghayi\\PepipostAPI\\": "src/"
+        }
     }
 }
