--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "6.2.0",
+        "guzzlehttp/guzzle": "^6.2",
         "php": "^7.0"
     },
     "autoload": {
