update composer.json: update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "baghayi/pepipost-api",
+    "name": "hr-d/pepipost-api",
     "description": "A Wrapper around some of pepipost API resources",
     "license": "MIT",
     "authors": [
